--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"clsx": "^1.2.1",
+		"lodash.debounce": "^4.0.8",
 		"normalize.css": "^8.0.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"rodal": "^2.0.1",
 		"sass": "^1.62.1",
 		"styled-components": "^5.3.11",
 		"web-vitals": "^2.1.4"
